--- a/reaserch/01_data_ingestion.ipynb
+++ b/reaserch/01_data_ingestion.ipynb
@@ -173,29 +173,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-02-21 20:31:00,930:INFO:common:yaml file :config\\config.yaml loaded succfully]\n",
-      "[2025-02-21 20:31:00,932:INFO:common:yaml file :params.yaml loaded succfully]\n",
-      "[2025-02-21 20:31:00,935:INFO:common:created directory at: artifacts]\n",
-      "[2025-02-21 20:31:00,937:INFO:common:created directory at: artifacts/data_ingestion]\n"
+      "[2025-02-21 20:32:22,595:INFO:common:yaml file :config\\config.yaml loaded succfully]\n",
+      "[2025-02-21 20:32:22,599:INFO:common:yaml file :params.yaml loaded succfully]\n",
+      "[2025-02-21 20:32:22,602:INFO:common:created directory at: artifacts]\n",
+      "[2025-02-21 20:32:22,604:INFO:common:created directory at: artifacts/data_ingestion]\n",
+      "[2025-02-21 20:32:22,606:INFO:2312406266:Downloading data from https://drive.google.com/file/d/1g0FAt3OgF4BOqwvxBEMCHJ04FaypAALz/view?usp=sharing into file artifacts/data_ingestion/data.zip]\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "DataIngestion.__init__() got an unexpected keyword argument 'confi'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m     data_ingestion\u001b[38;5;241m.\u001b[39mextract_zip_file()\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m----> 9\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "Cell \u001b[1;32mIn[10], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m config\u001b[38;5;241m=\u001b[39mConfigurationManager()\n\u001b[0;32m      3\u001b[0m data_ingestion_config\u001b[38;5;241m=\u001b[39mconfig\u001b[38;5;241m.\u001b[39mget_data_ingestion_config()\n\u001b[1;32m----> 4\u001b[0m data_ingestion\u001b[38;5;241m=\u001b[39m\u001b[43mDataIngestion\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconfi\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdata_ingestion_config\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m data_ingestion\u001b[38;5;241m.\u001b[39mdownload_file()\n\u001b[0;32m      6\u001b[0m data_ingestion\u001b[38;5;241m.\u001b[39mextract_zip_file()\n",
-      "\u001b[1;31mTypeError\u001b[0m: DataIngestion.__init__() got an unexpected keyword argument 'confi'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?/export=download&id=1g0FAt3OgF4BOqwvxBEMCHJ04FaypAALz\n",
+      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=1g0FAt3OgF4BOqwvxBEMCHJ04FaypAALz&confirm=t&uuid=9fff954d-d173-441a-b450-bc1996f4fbf3\n",
+      "To: c:\\projet\\Kideny_Disease_Classification\\artifacts\\data_ingestion\\data.zip\n",
+      "100%|██████████| 51.0M/51.0M [02:12<00:00, 384kB/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-02-21 20:34:41,587:INFO:2312406266:Download data from https://drive.google.com/file/d/1g0FAt3OgF4BOqwvxBEMCHJ04FaypAALz/view?usp=sharing into file artifacts/data_ingestion/data.zip]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
